<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.bahmni.module</groupId>
    <artifactId>bahmni</artifactId>
    <version>5.4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>BahmniEMR Core</name>

    <modules>
        <module>bahmni-emr-api</module>
        <module>bahmnicore-api</module>
        <module>openmrs-elis-atomfeed-client-omod</module>
        <module>openerp-atomfeed-client-omod</module>
        <module>bahmnicore-omod</module>
        <module>reference-data</module>
        <module>admin</module>
        <module>vagrant-deploy</module>
        <module>bahmni-mapping</module>
        <module>obs-relation</module>
        <module>bahmni-test-commons</module>
        <module>bahmnicore-ui</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <openMRSVersion>1.10.1</openMRSVersion>
        <openMRSWebServicesVersion>2.10</openMRSWebServicesVersion>
        <openMRSRuntimeVersion>1.10.0</openMRSRuntimeVersion>
        <springVersion>3.0.5.RELEASE</springVersion>
        <atomfeed.version>1.3</atomfeed.version>
        <addressHierarchyVersion>2.4</addressHierarchyVersion>
        <reportingModuleVersion>0.9.1</reportingModuleVersion>
        <calculationModuleVersion>1.1</calculationModuleVersion>
        <serializationXstreamModuleVersion>0.2.7</serializationXstreamModuleVersion>
        <emrapi-omod.version>1.7-SNAPSHOT</emrapi-omod.version>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>bahmni-artifactory</id>
            <name>bahmni-artifactory-snapshots</name>
            <url>http://bahmnirepo.thoughtworks.com/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <!--Child modules-->
            <dependency>
                <groupId>org.bahmni.module</groupId>
                <artifactId>bahmni-mapping</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bahmni.module</groupId>
                <artifactId>bahmni-emr-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bahmni.module</groupId>
                <artifactId>openerp-atomfeed-client-omod</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bahmni.module</groupId>
                <artifactId>openelis-atomfeed-client-omod</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bahmni.module</groupId>
                <artifactId>admin</artifactId>
                <version>${project.parent.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bahmni.module</groupId>
                <artifactId>bahmnicore-omod</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--End of child modules-->

            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity</artifactId>
                <scope>provided</scope>
                <version>1.6.2</version>
            </dependency>
            <dependency>
                <groupId>commons-httpclient</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>3.1</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${springVersion}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${springVersion}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test-mvc</artifactId>
                <version>1.0.0.M1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.api</groupId>
                <artifactId>openmrs-api</artifactId>
                <version>${openMRSVersion}</version>
                <type>jar</type>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <groupId>javax.servlet</groupId>
                        <artifactId>servlet-api</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.openmrs.web</groupId>
                <artifactId>openmrs-web</artifactId>
                <version>${openMRSVersion}</version>
                <type>jar</type>
                <exclusions>
                    <exclusion>
                        <groupId>javax.servlet</groupId>
                        <artifactId>servlet-api</artifactId>
                    </exclusion>
                </exclusions>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.api</groupId>
                <artifactId>openmrs-api</artifactId>
                <version>${openMRSVersion}</version>
                <type>test-jar</type>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>javax.servlet</groupId>
                        <artifactId>servlet-api</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.openmrs.web</groupId>
                <artifactId>openmrs-web</artifactId>
                <version>${openMRSVersion}</version>
                <type>test-jar</type>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>javax.servlet</groupId>
                        <artifactId>servlet-api</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.openmrs.test</groupId>
                <artifactId>openmrs-test</artifactId>
                <version>${openMRSVersion}</version>
                <type>pom</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.tools</groupId>
                <artifactId>openmrs-tools</artifactId>
                <version>${openMRSVersion}</version>
            </dependency>

            <!--webservices.rest main module-->
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>webservices.rest-omod</artifactId>
                <version>${openMRSWebServicesVersion}</version>
                <type>jar</type>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>bahmni-migrator</artifactId>
                <version>5.4-SNAPSHOT</version>
                <type>jar</type>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>webservices.rest-omod-common</artifactId>
                <version>${openMRSWebServicesVersion}</version>
                <type>jar</type>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>appframework-api</artifactId>
                <version>2.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>reporting-api</artifactId>
                <version>${reportingModuleVersion}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>calculation-api</artifactId>
                <version>${calculationModuleVersion}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>serialization.xstream-api</artifactId>
                <version>${serializationXstreamModuleVersion}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>webservices.rest-omod-common</artifactId>
                <version>${openMRSWebServicesVersion}</version>
                <classifier>tests</classifier>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>idgen-api</artifactId>
                <version>2.6</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>emrapi-api-1.10</artifactId>
                <version>${emrapi-omod.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>emrapi-omod</artifactId>
                <version>${emrapi-omod.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>providermanagement-api</artifactId>
                <version>1.1.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.xmlrpc</groupId>
                <artifactId>xmlrpc-client</artifactId>
                <version>3.1.3</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.15</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>3.0.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-core-asl</artifactId>
                <version>1.5.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-mapper-asl</artifactId>
                <version>1.5.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.bahmni.module</groupId>
                <artifactId>file-uploader</artifactId>
                <version>${project.parent.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>
    
    <dependencies>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.15</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.7</target>
                        <source>1.7</source>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.4</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>IT</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.17</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m</argLine>
                                    <forkCount>3</forkCount>
                                    <reuseForks>false</reuseForks>
                                    <parallel>classes</parallel>
                                    <useUnlimitedThreads>true</useUnlimitedThreads>
                                    <includes>
                                        <include>**/*IT.java</include>
                                    </includes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

    <repositories>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>interval:10080</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>sonatype-nexus-releases</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Repository for dependencies</name>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>interval:10080</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>http://maven.springframework.org/release</url>
            <releases>
                <updatePolicy>interval:10080</updatePolicy>
            </releases>
        </repository>
        <repository>
            <id>apache-maven-release</id>
            <name>Apache Maven Release Repository</name>
            <url>https://repository.apache.org/content/repositories/releases</url>
            <releases>
                <updatePolicy>interval:10080</updatePolicy>
            </releases>
        </repository>
        <repository>
            <id>JBoss</id>
            <name>The "public-jboss" repository group provides a combined view all JBoss community project artifacts
            </name>
            <layout>default</layout>
            <url>http://repository.jboss.org/nexus/content/groups/public-jboss</url>
            <releases>
                <updatePolicy>interval:10080</updatePolicy>
            </releases>
        </repository>
        <repository>
            <id>spring-repo</id>
            <name>Spring Maven Repository</name>
            <url>http://maven.springframework.org/milestone</url>
            <releases>
                <updatePolicy>interval:10080</updatePolicy>
            </releases>
            <snapshots>
                <updatePolicy>interval:10080</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <releases>
                <updatePolicy>always</updatePolicy>
            </releases>
        </repository>
        <repository>
            <id>bahmni-artifactory</id>
            <name>bahmni-artifactory-snapshots</name>
            <url>http://bahmnirepo.thoughtworks.com/artifactory/libs-snapshot-local</url>
            <snapshots>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Repository for plugins</name>
        </pluginRepository>
        <pluginRepository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>http://maven.springframework.org/release</url>
        </pluginRepository>
        <pluginRepository>
            <id>spring-maven-milestone</id>
            <name>Spring Maven Milestone Repository</name>
            <url>http://maven.springframework.org/milestone</url>
        </pluginRepository>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
